--- a/src/app/teacher-router/components/map/map.component.html
+++ b/src/app/teacher-router/components/map/map.component.html
@@ -1,2 +1,3 @@
-<div class="mapContainer">
-  <img src="../../../../assets/images/google-maps-22.jpg" class="mapContainer img"></div>
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+
+<div class="mapContainer"></div>
