--- a/src/app/teacher-router/components/header/header.component.html
+++ b/src/app/teacher-router/components/header/header.component.html
@@ -18,7 +18,7 @@
 
 <header *ngIf="header_Logged">
 
-  <button (click)="isAdmin() ? toggleSidenav() : toggleVisitorSidenav()" mat-button>
+  <button (click)="isAdmin()&& !isRouterManager ? toggleSidenav() : toggleVisitorSidenav()" mat-button>
     <mat-icon fontIcon="menu"></mat-icon>
   </button>
   
